--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"author": {
 		"name": "Michael Michlin",
-		"email": "mmulya@hotmail.com",
+		"email": "mmulya@outlook.com",
 		"url": "https://mmichlin66.github.io"
 	},
 	"keywords": [
