--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcl",
-	"version": "0.1.4",
+	"version": "0.2.1",
 	"description": "MiM Component Library",
 	"homepage": "https://mmichlin66.github.io/mimbl/mimclAbout.html",
 	"repository": "github:mmichlin66/mimcl",
@@ -8,9 +8,8 @@
 	"module": "./lib/mimcl.js",
 	"types": "./lib/mimclTypes.d.ts",
 	"scripts": {
-		"buildDev": "buildDev.bat",
-		"buildProd": "buildProd.bat",
-		"doc": "doc.bat"
+		"buildDev": "webpack --display-error-details",
+		"buildProd": "webpack -p --display-error-details"
 	},
 	"author": {
 		"name": "Michael Michlin",
@@ -28,12 +27,12 @@
 		"ifdef-loader": "^2.1.1",
 		"ignore-loader": "^0.1.2",
 		"mini-css-extract-plugin": "^0.5.0",
-		"react": "^16.8.6",
+		"react": "^16.13.0",
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^5.4.5",
-		"typescript": "^3.4.5",
-		"webpack": "^4.35.3",
-		"webpack-cli": "^3.3.6"
+		"typescript": "^3.8.3",
+		"webpack": "^4.41.6",
+		"webpack-cli": "^3.3.11"
 	},
 	"files": [
 		"README.md",
@@ -49,6 +48,7 @@
 	],
 	"dependencies": {
 		"mimbl": "^0.1.12",
+		"mimcss": "^0.1.4",
 		"mimurl": "^0.1.2"
 	}
 }
