--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
 		"module": "commonjs",
+        "moduleResolution": "node",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
 		"rootDir": "src",
