1) Upgrade version to 0.4.3. 2) Rename mimcssTypes.ts to index.ts. 3) Use ESNext module instead of CommonJS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
 		"strictNullChecks": false,
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
-		"module": "commonjs",
+        "noEmitOnError": true,
+        "module": "ESNext",
         "moduleResolution": "node",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
