--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "mimcl",
-	"version": "0.3.4",
+	"version": "0.4.3",
 	"description": "MiM Component Library",
 	"homepage": "https://mmichlin66.github.io/mimbl/mimclAbout.html",
 	"repository": "github:mmichlin66/mimcl",
 	"main": "./lib/mimcl.ts",
 	"module": "./lib/mimcl.js",
-	"types": "./lib/mimclTypes.d.ts",
+	"types": "./lib/index.d.ts",
 	"scripts": {
 		"build": "tsc -b && webpack"
 	},
@@ -31,7 +31,7 @@
 		"README.md",
 		"lib/mimcl.js",
 		"lib/mimcl.dev.js",
-		"lib/mimclTypes.d.ts",
+		"lib/index.d.ts",
 		"lib/router/Router.d.ts",
 		"lib/popup/Popup.d.ts",
 		"lib/popup/Dialog.d.ts",
@@ -40,8 +40,8 @@
 		"lib/virt/VTable.d.ts"
 	],
 	"dependencies": {
-		"mimbl": "^0.3.4",
-		"mimcss": "^0.7.4",
-		"mimurl": "^0.1.4"
+		"mimbl": "^0.4.3",
+		"mimcss": "^0.7.6",
+		"mimurl": "^0.1.5"
 	}
 }
