--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
 		"lib/mimcl.js",
 		"lib/mimcl.dev.js",
 		"lib/index.d.ts",
-		"lib/core/ColorStyles.d.ts",
-		"lib/popup/PopupStyles.d.ts",
-		"lib/popup/Popups.d.ts",
-		"lib/popup/Dialog.d.ts",
-		"lib/popup/MsgBox.d.ts",
-		"lib/popup/Progress.d.ts",
-		"lib/dnd/DragDropApi.d.ts",
-		"lib/router/Router.d.ts",
-		"lib/tree/TreeApi.d.ts",
-		"lib/virt/ScrollAxis.d.ts",
-		"lib/virt/VTable.d.ts",
-		"lib/util/LocalStyles.d.ts",
-		"lib/util/ModuleAug.d.ts"
-	],
+        "lib/containers/Splitter.d.ts",
+        "lib/core/ColorStyles.d.ts",
+        "lib/dnd/DragDropApi.d.ts",
+        "lib/popup/Dialog.d.ts",
+        "lib/popup/MsgBox.d.ts",
+        "lib/popup/Popup.d.ts",
+        "lib/popup/PopupStyles.d.ts",
+        "lib/popup/Progress.d.ts",
+        "lib/router/Router.d.ts",
+        "lib/tree/TreeApi.d.ts",
+        "lib/util/ModuleAug.d.ts",
+        "lib/virt/ScrollAxis.d.ts",
+        "lib/virt/VTable.d.ts"
+    ],
 	"dependencies": {
 		"mimbl": "^0.8.2",
 		"mimcss": "^0.11.14",
